--- a/popup.html
+++ b/popup.html
@@ -1319,6 +1319,13 @@
                       <span data-i18n="chatEnableTranslation">Enable translation</span>
                     </label>
                     <label class="option">
+                      <span data-i18n="chatTranslationProvider">Translation Provider</span>
+                      <select id="translationProvider" class="text-input" style="width: 200px; margin-left: 8px;">
+                        <option value="microsoft" selected>Microsoft Translator</option>
+                        <option value="google">Google Translate</option>
+                      </select>
+                    </label>
+                    <label class="option">
                       <span data-i18n="chatTargetLanguage">Target language</span>
                       <select id="targetLanguage" class="text-input" style="width: 200px; margin-left: 8px;">
                         <option value="af">Afrikaans</option>
