--- a/popup.html
+++ b/popup.html
@@ -412,7 +412,7 @@
         font-weight: 500;
         display: inline-block;
         border: 1px solid var(--border-light);
-        max-width: 200px;
+        max-width: 175px;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
@@ -1286,6 +1286,13 @@
                         <span class="checkmark"></span>
                       </div>
                       <span data-i18n="hidePreviews">Hide previews</span>
+                    </label>
+                    <label class="option">
+                      <div class="checkbox">
+                        <input type="checkbox" id="useKDisplay" />
+                        <span class="checkmark"></span>
+                      </div>
+                      <span data-i18n="useKDisplay">Use K format for viewer count</span>
                     </label>
                     <label class="option">
                       <span data-i18n="checkInterval">Check interval (minutes)</span>
