--- a/popup.html
+++ b/popup.html
@@ -396,11 +396,22 @@
         gap: 2px;
         font-size: 12px;
         color: var(--text-secondary);
+        min-width: 0;
+      }
+
+      .streamer-avatar {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        object-fit: cover;
+        flex-shrink: 0;
+        border: 1px solid var(--border-light);
       }
 
       .streamer-name {
         font-weight: 500;
         color: var(--text-primary);
+        white-space: nowrap;
       }
 
       .game-name {
@@ -412,10 +423,11 @@
         font-weight: 500;
         display: inline-block;
         border: 1px solid var(--border-light);
-        max-width: 175px;
+        max-width: 115px;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+        flex-shrink: 0;
       }
 
       .stream-stats {
