--- a/popup.html
+++ b/popup.html
@@ -536,6 +536,7 @@
         margin-top: 8px;
         min-height: 120px;
         align-content: start;
+        grid-auto-rows: min-content;
       }
 
       body.unauthorized .channels-container {
@@ -551,7 +552,8 @@
         background: var(--bg-secondary);
         transition: all 0.2s ease;
         position: relative;
-        min-height: 72px;
+        min-height: 80px;
+        overflow: hidden;
       }
 
       .channel-item:hover {
@@ -565,6 +567,17 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin-bottom: 4px;
+        min-height: 24px;
+      }
+
+      .channel-avatar {
+        width: 22px;
+        height: 22px;
+        border-radius: 50%;
+        object-fit: cover;
+        flex-shrink: 0;
+        border: 1px solid var(--border-light);
       }
 
       .channel-name {
@@ -574,6 +587,11 @@
         cursor: pointer;
         text-decoration: none;
         transition: color 0.2s ease;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        flex: 1;
+        min-width: 0;
       }
 
       .channel-name:hover {
@@ -585,6 +603,8 @@
         font-size: 12px;
         color: var(--text-secondary);
         margin-bottom: 6px;
+        flex: 1;
+        min-width: 0;
       }
 
       .channel-desc {
