--- a/popup.html
+++ b/popup.html
@@ -180,7 +180,7 @@
         overflow-y: auto;
         padding: var(--spacing-sm);
         margin-top: 50px;
-        margin-bottom: 70px;
+        margin-bottom: 90px;
       }
 
       .stream-list::-webkit-scrollbar {
@@ -199,6 +199,10 @@
 
       .stream-list::-webkit-scrollbar-thumb:hover {
         background: var(--text-muted);
+      }
+
+      #streamList {
+        margin-bottom: 16px;
       }
 
       .channels-container::-webkit-scrollbar {
