--- a/popup.html
+++ b/popup.html
@@ -445,6 +445,44 @@
         pointer-events: none;
       }
 
+      .stream-item .btn-fav {
+        position: absolute;
+        right: 6px;
+        top: 6px;
+        width: 24px;
+        height: 24px;
+        border: none;
+        background: rgba(0,0,0,0.6);
+        color: #fff;
+        border-radius: 6px;
+        cursor: pointer;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.2s ease;
+        backdrop-filter: blur(8px);
+      }
+
+      .stream-item:hover .btn-fav {
+        opacity: 1;
+        visibility: visible;
+      }
+
+      .stream-item .btn-fav:hover {
+        background: rgba(239, 68, 68, 0.9);
+        color: #ffffff;
+      }
+
+      .stream-item .btn-fav .fav-icon {
+        width: 12px;
+        height: 12px;
+        stroke: currentColor;
+        fill: none;
+        transition: all 0.2s ease;
+      }
+
       .stream-info {
         flex: 1;
         min-width: 0;
@@ -1770,61 +1808,9 @@
                   </div>
                 </div>
 
-                <div class="settings-section" id="notificationSettingsSection" style="display: none;">
-                  <div class="section-divider"></div>
-                  <h3 class="section-title"><span aria-hidden="true" style="display:inline-flex;align-items:center;gap:6px;vertical-align:middle;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                      <path d="M18 8a6 6 0 0 0-12 0c0 7-3 9-3 9h18s-3-2-3-9"/>
-                      <path d="M13.73 21a2 2 0 0 1-3.46 0"/>
-                    </svg>
-                  </span> <span data-i18n="notificationSettings">Notification Settings</span></h3>
-                  <div class="settings-grid">
-                    <label class="option">
-                      <div class="checkbox">
-                        <input type="checkbox" id="muteNotifications" />
-                        <span class="checkmark"></span>
-                      </div>
-                      <span data-i18n="muteNotifications">Mute notifications</span>
-                    </label>
-                    <label class="option">
-                      <div class="checkbox">
-                        <input type="checkbox" id="hideOffline" />
-                        <span class="checkmark"></span>
-                      </div>
-                      <span data-i18n="hideOfflineStreamers">Hide offline streamers</span>
-                    </label>
-                    <label class="option">
-                      <div class="checkbox">
-                        <input type="checkbox" id="hidePreviews" />
-                        <span class="checkmark"></span>
-                      </div>
-                      <span data-i18n="hidePreviews">Hide previews</span>
-                    </label>
-                    <label class="option">
-                      <div class="checkbox">
-                        <input type="checkbox" id="useKDisplay" />
-                        <span class="checkmark"></span>
-                      </div>
-                      <span data-i18n="useKDisplay">Use K format for viewer count</span>
-                    </label>
-                    <label class="option">
-                      <span data-i18n="checkInterval">Check interval (minutes)</span>
-                      <input 
-                        type="number" 
-                        class="number-input" 
-                        id="pollMinutes" 
-                        value="1" 
-                        min="1" 
-                        max="60" 
-                      />
-                    </label>
-                  </div>
-                  <div class="help-text">
-                    <span data-i18n="checkIntervalHelp">How often to check stream status, recommended 1-5 minutes</span>
-                  </div>
-                </div>
+                
 
-                <div class="settings-section" id="translationSection" style="display: none;">
+                <div class="settings-section" id="translationSection">
                   <h3 class="section-title"><span aria-hidden="true" style="display:inline-flex;align-items:center;gap:6px;vertical-align:middle;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                       <path d="M3 5h12M9 3v2m1.048 9.5A18.022 18.022 0 0 1 6.412 9m6.088 9h7M11 21l5-10 5 10M12.751 5C11.783 10.77 8.07 15.61 3 18.129"/>
@@ -1966,6 +1952,78 @@
                 </div>
                 </div>
 
+                <div class="settings-section" id="notificationSettingsSection" style="display: none;">
+                  <div class="section-divider"></div>
+                  <h3 class="section-title"><span aria-hidden="true" style="display:inline-flex;align-items:center;gap:6px;vertical-align:middle;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                      <path d="M18 8a6 6 0 0 0-12 0c0 7-3 9-3 9h18s-3-2-3-9"/>
+                      <path d="M13.73 21a2 2 0 0 1-3.46 0"/>
+                    </svg>
+                  </span> <span data-i18n="notificationSettings">Notification Settings</span></h3>
+                  <div class="settings-grid">
+                    <label class="option" style="margin-top: 10px;">
+                      <div class="checkbox">
+                        <input type="checkbox" id="autoBonusEnabled" checked />
+                        <span class="checkmark"></span>
+                      </div>
+                      <span data-i18n="featureAutoBonus">Auto claim channel points</span>
+                    </label>
+                    <div class="section-divider"></div>
+                    <label class="option">
+                      <div class="checkbox">
+                        <input type="checkbox" id="chattersCountEnabled" />
+                        <span class="checkmark"></span>
+                      </div>
+                      <span data-i18n="featureChattersCount">Twitch Chatters Count</span>
+                    </label>
+                    <div class="help-text">
+                      <span data-i18n="settingsRefreshHint">After changing settings, refresh the Twitch page for changes to take effect.</span>
+                    </div>
+                    <label class="option">
+                      <div class="checkbox">
+                        <input type="checkbox" id="muteNotifications" />
+                        <span class="checkmark"></span>
+                      </div>
+                      <span data-i18n="muteNotifications">Mute notifications</span>
+                    </label>
+                    <label class="option">
+                      <div class="checkbox">
+                        <input type="checkbox" id="hideOffline" />
+                        <span class="checkmark"></span>
+                      </div>
+                      <span data-i18n="hideOfflineStreamers">Hide offline streamers</span>
+                    </label>
+                    <label class="option">
+                      <div class="checkbox">
+                        <input type="checkbox" id="hidePreviews" />
+                        <span class="checkmark"></span>
+                      </div>
+                      <span data-i18n="hidePreviews">Hide previews</span>
+                    </label>
+                    <label class="option">
+                      <div class="checkbox">
+                        <input type="checkbox" id="useKDisplay" />
+                        <span class="checkmark"></span>
+                      </div>
+                      <span data-i18n="useKDisplay">Use K format for viewer count</span>
+                    </label>
+                    <label class="option">
+                      <span data-i18n="checkInterval">Check interval (minutes)</span>
+                      <input 
+                        type="number" 
+                        class="number-input" 
+                        id="pollMinutes" 
+                        value="1" 
+                        min="1" 
+                        max="60" 
+                      />
+                    </label>
+                  </div>
+                  <div class="help-text">
+                    <span data-i18n="checkIntervalHelp">How often to check stream status, recommended 1-5 minutes</span>
+                  </div>
+                </div>
+
                 <div class="settings-section" id="backupSection" style="display: none;">
                   <h3 class="section-title"><span aria-hidden="true" style="display:inline-flex;align-items:center;gap:6px;vertical-align:middle;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -1975,10 +2033,12 @@
                     </svg>
                   </span> <span data-i18n="settingsBackup"></span></h3>
                   <div class="input-group" style="margin-bottom: 12px;">
-                    <button class="btn-primary" id="exportSettings" style="background: #10b981; border-color: #10b981; margin-right: 8px;">
+                    <button class="btn-primary" id="exportSettings" style="background: #10b981; border-color: #10b981; margin-right: 8px; display: inline-flex; align-items: center; gap: 6px;">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><path d="M7 10l5-5 5 5"/><path d="M12 15V5"/></svg>
                       <span data-i18n="exportSettings"></span>
                     </button>
-                    <button class="btn-primary" id="importSettings" style="background: #3b82f6; border-color: #3b82f6;">
+                    <button class="btn-primary" id="importSettings" style="background: #3b82f6; border-color: #3b82f6; display: inline-flex; align-items: center; gap: 6px;">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><path d="M7 10l5 5 5-5"/><path d="M12 4v11"/></svg>
                       <span data-i18n="importSettings"></span>
                     </button>
                   </div>
