--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://api.twitch.tv https://id.twitch.tv https://gql.twitch.tv https://translate.googleapis.com https://api-edge.cognitive.microsofttranslator.com https://edge.microsoft.com; img-src 'self' data: https:;">
     <title data-i18n="extensionTitle">Twitch Live</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
