--- a/popup.html
+++ b/popup.html
@@ -466,7 +466,40 @@
         backdrop-filter: blur(8px);
       }
 
+      .stream-item .remove-btn {
+        position: absolute;
+        top: 6px;
+        right: 36px;
+        width: 24px;
+        height: 24px;
+        padding: 0;
+        border: none;
+        background: rgba(0,0,0,0.6);
+        color: #ffffff;
+        border-radius: 6px;
+        cursor: pointer;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 14px;
+        font-weight: 700;
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.2s ease;
+        backdrop-filter: blur(8px);
+      }
+
+      .stream-item .remove-btn:hover {
+        background: rgba(239, 68, 68, 0.9);
+        color: #ffffff;
+      }
+
       .stream-item:hover .btn-fav {
+        opacity: 1;
+        visibility: visible;
+      }
+
+      .stream-item:hover .remove-btn {
         opacity: 1;
         visibility: visible;
       }
